Fixed the bug that the emwi-media-new-panel covers the edit-attachment modal.
git-svn-id: https://plugins.svn.wordpress.org/external-media-without-import/trunk@1669251 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/external-media-without-import.css
+++ b/external-media-without-import.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  z-index: 999999;
+  z-index: 999;
   background-color: rgb(241, 241, 241);
   text-align: left;
   box-sizing: border-box;
